<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:gravity="center"
    android:padding="26dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="375dp"
        android:layout_height="611dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="330dp"
            android:layout_height="125dp"
            android:src="@drawable/Floridex_logo"
            tools:ignore="ContentDescription" />

        <!--        <EditText-->
        <!--            android:id="@+id/username_input"-->
        <!--            android:layout_width="312dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="32dp"-->
        <!--            android:background="@drawable/rounded_corner"-->
        <!--            android:hint="Username"-->
        <!--            android:inputType="text"-->
        <!--            android:padding="18dp"-->
        <!--            android:textSize="20sp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="312dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="18dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--        <EditText-->
        <!--            android:id="@+id/password_input"-->
        <!--            android:layout_width="312dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="12dp"-->
        <!--            android:background="@drawable/rounded_corner"-->
        <!--            android:hint="Password"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:padding="18dp"-->
        <!--            android:textSize="20sp" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:padding="18dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/Green"
            android:padding="18dp"
            android:text="@string/login"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/oleo_script"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/Orange"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/Green"
            android:text="@string/register"
            android:textSize="15sp" />
        <!--        If we decide to be able to login with socials-->
        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Social Login"-->
        <!--            android:textSize="18sp"-->
        <!--            android:gravity="center"-->
        <!--            android:layout_marginTop="32dp"/>-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:gravity="center">-->

        <!--            <ImageView-->
        <!--                android:layout_width="64dp"-->
        <!--                android:layout_height="64dp"-->
        <!--                android:layout_margin="16dp"-->
        <!--                android:src=""/>-->

        <!--        </LinearLayout>-->

    </LinearLayout>

</LinearLayout>